2005-12-16 Scott Dattalo <scott@dattalo.com>
	* src/ioports.h, src/ioports.cc, src/pic-ioports.h,
	src/pic-ioports.cc: moved some of the functionality in the
	PicPort classes upto the generic Port classes. Also added
	comments. 

2005-12-12 J.R. Heisey <jrheisey@sourceforge.com
	* cli\cmd_symbol.cc, cli\cmd_symbol.h, src\operator.cc,
	cli\parse.yy: I've reconsidered regarding implementing
	and indirection operator. The ampersand character may
	now be used to reference a integer value or a register
	symbol as an indirection operator. I've also made
	it possible to type only an expression enclosed in parens.
	The expression will evaluate and be printed on the next
	console.

2005-12-11 J.R. Heisey <jrheisey@sourceforge.com
	* src\expr.cc, src\expr.h, src\operator.cc, src\operator.h,
	cli\parse.yy, cli\scan.ll, src\symbol.cc, src\symbol.h,
	src\value.cc src\value.h: Problems with expression evaluation.
	Could not evaluate A=-X. Added evaluate() function to class
	Value and a pecialized implementations to relevant derived
	classes. The LiteralSymbol::evaluate() now calls the symbols
	evaluate() so that a register_symbol will return the register
	contents.
	* Also implemented reg(int) as an expression so it can be
	included in calculations
	* Implemented the ampersand character as an 'address of' operator
	Fixed minus sign for negation and one's complement.
	* src/gpsim_object.cc: gpsimObject:showType() now does not
	include the word class for the type for Windows.

2005-12-11 Borut Razem <borut.razem@siol.net>

	* src/16bit-instructions.h, src/breakpoints.h, src/pic-instructions.h,
	  src/pic-instructions.cc, src/processor.h, src/processor.cc:
	  fixed gcc errors: processor.h:150: error: using typedef-name
	  `instruction::INSTRUCTION_TYPES' after `enum'

2005-12-10 J.R. Heisey <jrheisey@sourceforge.com>src/registers.h:
	* src/expr.cc, src/ValueCollections.cc, src/ValueCollections.h:
	Added toString(ExprList_t*) and move some code from