@@ -1,3 +1,6 @@
+2005-12-17 Scott Dattalo <scott@dattalo.com>
+	* cli/input.cc: removed glib dependencies for non-gui builds
+	
 2005-12-16 Scott Dattalo <scott@dattalo.com>
 	* src/ioports.h, src/ioports.cc, src/pic-ioports.h,
 	src/pic-ioports.cc: moved some of the functionality in the
